syntax = "proto3";

option java_outer_classname = "RaftHeartbeatResWrapper";

message RaftHeartbeatRes {

  enum ResponseType {
    // 接受心跳
    OK = 0;
    // 期数不匹配
    TERM_EXPIRED = 1;
  }

  ResponseType resType = 1;

  // 当前leader的ID
  int32 leaderId = 2;

  // 期数
  int64 term = 3;

}