syntax = "proto3";

option java_outer_classname = "RaftResWrapper";

import "RaftHeartbeatResponse.proto";
import "RaftVoteResponse.proto";

message RaftRes {
  // 错误信息
  string errorMsg = 1;
  // 选票响应
  RaftVoteRes raftVoteRes = 2;
  // 心跳响应
  RaftHeartbeatRes raftHeartbeatRes = 3;

}